--- a/app/src/main/res/layout/holder_skill.xml
+++ b/app/src/main/res/layout/holder_skill.xml
@@ -17,6 +17,7 @@
         android:text="c++"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
