--- a/app/src/main/res/drawable-v24/my_shape.xml
+++ b/app/src/main/res/drawable-v24/my_shape.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape  android:shape="rectangle">
 
-    <corners
-        android:radius="10dp" />
+            <solid android:color="#d8d8d8" />
+            <corners android:radius="7dp" />
 
-    <stroke
-        android:width="1dp"
-        android:color="@color/black" />
+        </shape>
+    </item>
 
-</shape>
+<item android:bottom="3px" >
+    <shape  android:shape="rectangle">
+
+        <solid android:color="#FFFFFF" />
+        <corners android:radius="7dp" />
+
+    </shape>
+</item>
+</layer-list>
