--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="black">#000000</color>
-    <color name="purple">#990099</color>
+    <color name="purple">#9C27B0</color>
     <color name="blue">#000099</color>
     <color name="red">#FF0000</color>
 
